# math-mcp

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugin/.claude-plugin/: plugin.json
plugin/.claude-plugin/hooks/: hooks.json
plugin/core/: detect_math.mjs  detect_math.test.mjs  detect_math_prompt.mjs  detect_math_prompt.test.mjs
plugin/hooks/: pretooluse.mjs  subagentstart.mjs  userpromptsubmit.mjs
plugin/opencode/: AGENTS.md  math-mcp.ts  opencode.json
plugin/opencode/commands/: math-verify.md
plugin/skills/math-mcp/: SKILL.md
src/math_mcp/: __init__.py  limits.py  models.py  server.py
tests/: test_server.py
