[project]
name = "math-mcp"
version = "0.2.0"
description = "An MCP server providing exact, arbitrary-precision, and symbolic math tools backed by SymPy."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Abraham Sewill", email = "abraham.sewill@proton.me" }]
keywords = ["mcp", "math", "sympy", "symbolic", "arithmetic", "llm", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "mcp[cli]>=1.27.0",
    "mpmath>=1.3.0",
    "sympy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/Jsewill/math-mcp"
Issues = "https://github.com/Jsewill/math-mcp/issues"
Repository = "https://github.com/Jsewill/math-mcp"

[project.scripts]
math-mcp = "math_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "coverage[toml]>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/math_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/math_mcp",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/math_mcp"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
